# aoc_2024

./: .gitignore  README.md  pyproject.toml
.github/prompts/: add_new_day.prompt.md
inputs/: day01.txt  day04.sample.txt  day04.txt  day05.sample.txt  day05.txt  day06.sample.txt  day06.txt
notebooks/: day01_exploration.ipynb  day02-03.explore.ipynb  day02-04.explore.ipynb  day02_explore.ipynb
solutions/: __init__.py
solutions/utils/: __init__.py
src/aoc2024/day01/: __init__.py  day01.py
src/aoc2024/day02/: __init__.py  day02.py
src/aoc2024/day03/: day03.py
src/aoc2024/day04/: day04.py
src/aoc2024/day05/: day05.py
src/aoc2024/day06/: __init__.py  day06.py
src/aoc2024/utils/: __init__.py  file_io.py
tests/: __init__.py
tests/day01/: __init__.py  test_day01.py
tests/day02/: test_day02.py
tests/day03/: __init__.py  test_day03.py
tests/day04/: test_day04.py
tests/day05/: test_day05.py
tests/day06/: __init__.py  test_day06.py
tests/utils/: test_file_io.py
